Make useful ranges info align in the expandable area. Use bootstrap row and column to achieve this. - In widget.html (line 59-78), add bootstrap row and column to display   useful ranges info. This will help to align the info. - In opus.css (line 1953), add styling to make sure default x scrollbar   will not show up in the dropdown menu.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1950,4 +1950,5 @@ ul.ui-autocomplete a.ui-state-active {
 .op-useful-ranges .scrollable-menu {
     max-height: 200px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
